Decrease "stretching" and size, https://github.com/clarat-org/clarat/pull/956#issuecomment-261897357

--- a/app/assets/stylesheets/form/_main-search.scss
+++ b/app/assets/stylesheets/form/_main-search.scss
@@ -69,6 +69,7 @@
     position: relative;
     margin: 0 auto;
     padding: 30px 0 0;
+    max-width: 85%;
 
     #search_form_query,
     #search_form_search_location,
