--- a/app/assets/stylesheets/mediaqueries/_l.scss
+++ b/app/assets/stylesheets/mediaqueries/_l.scss
@@ -97,6 +97,7 @@
 
     .template--pages-home & {
       width: auto;
+      max-width: 100%;
 
       .input {
         &.search_form_query {
